k8s/deploymentConfig-api.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: 'api'
  labels:
    app.openshift.io/runtime: api
    deploymentconfig: 'api'
    app.kubernetes.io/name: 'api'
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    deploymentconfig: 'api'
    app.kubernetes.io/name: 'api'
  template:
    metadata:
      creationTimestamp: null
      labels:
        deploymentconfig: 'api'
        app.kubernetes.io/name: 'api'
    spec:
      containers:
          - name: "api"
            image: "ceciliarb/benchmark-api:latest"
            imagePullPolicy: "IfNotPresent"
            ports:
              - containerPort: 3000
                name: api
                protocol: TCP
            resources:
              limits:
                memory: "512Mi"
              requests:
                cpu: 1
                memory: "512Mi"
  triggers:
    - type: ConfigChange
