k8s/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: "api"
spec:
  ports:
    - port: 3000
      targetPort: api
      protocol: TCP
      name: api
  selector:
    deploymentconfig: api
    app.kubernetes.io/name: api
